# ckata

./: .gitignore  CMakeLists.txt
doctest/: doctest.h
src/: main.cpp  practice.cpp  practice.h
src/bublesort/: entrypoint.cpp  sorter.cpp  sorter.h
src/classes1/: CMakeLists.txt  entrypoint.cpp
src/classes1/inc/: MyAbstractClass.h  MyConcreteClass1.h  MySuccessorClass1.h
src/classes1/src/: MyAbstractClass.cpp  MyConcreteClass1.cpp  MySuccessorClass1.cpp
src/dynamic-arrays/: entrypoint.cpp
src/exceptions/: entrypoint.cpp
src/functions/1/: functions.cpp  functions.h
src/inverse-array/: entrypoint.cpp  task.txt
src/largest-time-for-given-digits/: CMakeLists.txt  Solution.h  tests_Solution.cpp
src/move-zeroes/: CMakeLists.txt  Solution.cpp  main.cpp
src/move-zeroes/include/: Solution.h
src/move-zeroes/tests/: CMakeLists.txt  test_move_zeroes.cpp
src/pointers/: entripoint.cpp
src/single-number/: CMakeLists.txt  main.cpp
src/single-number/include/: Solution.h
src/single-number/src/: Solution.cpp
src/structs/: entrypoint  entrypoint.cpp
src/two-sum/: CMakeLists.txt  Solution.h  main.cpp  tests_Solution.cpp
